unpackaged/main/default/objects/Child_Object_Sync_Settings__mdt/Child_Object_Sync_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for child object records to be sent along with parent object in payload</description>
    <label>Child Object Sync Settings</label>
    <pluralLabel>Child Object Sync Settings</pluralLabel>
</CustomObject>