unpackaged/main/default/objects/Child_Object_Sync_Settings__mdt/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <description>Value to be matched in filter field</description>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>