unpackaged/main/default/objects/Child_Object_Sync_Settings__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API Name of the child object</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>