unpackaged/main/default/objects/Child_Object_Sync_Settings__mdt/fields/Parent_Object_Settings__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Settings__c</fullName>
    <description>Reference of parent object's sync settings</description>
    <label>Parent Object Settings</label>
    <referenceTo>Sync_Settings__mdt</referenceTo>
    <relationshipLabel>Child Object Sync Settings</relationshipLabel>
    <relationshipName>Child_Object_Sync_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>