unpackaged/main/default/objects/Child_Object_Sync_Settings__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>API name of the relationship field with parent</description>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>